--- a/index.css
+++ b/index.css
@@ -1,5 +1,35 @@
+* {
+    font-family: 'Nanum Gothic Coding', monospace;
+    font-size: 40px;
+    line-height: 1;
+    color: #9e9ea7;
+    background-color: rgba(47,47,47,0.98);
+}
+
+.container {  
+    padding: 100px;
+    text-align: center;
+    
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+.header {
+    margin-top: 100px;
+}
 .responsive {
-    width: 100;
-    height: 100;
-    border-radius: 20;
+    width: 200px;
+    height: 200px;
+    border-radius: 200px;
+}
+ 
+a {
+    text-decoration: none;
+    color: white;
 }
