--- a/index.css
+++ b/index.css
@@ -1,47 +1,45 @@
 * {
-    font-family: 'Nanum Gothic Coding', monospace;
-    font-size: 40px;
-    line-height: 1;
-    color: #9e9ea7;
-    background-color: rgba(47,47,47,0.98);
+  font-family: "Nanum Gothic Coding", monospace;
+  font-size: 40px;
+  line-height: 1;
+  color: #9e9ea7;
+  background-color: rgba(47, 47, 47, 0.98);
 }
 
-.container {  
-    padding: 100px;
-    text-align: center;
-    
+.container {
+  padding: 100px;
+  text-align: center;
 }
 
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
 }
 
 .header {
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 .responsive {
-    width: 250px;
-    height: 250px;
-    border-radius: 200px;
+  width: 250px;
+  height: 250px;
+  border-radius: 200px;
 }
- 
+
 a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .res {
-    margin-top: 100px;
-    width: 400px;
-    height: 400px;
+  margin-top: 100px;
+}
+
+.pdf {
+  width: 400px;
+  height: 400px;
 }
 
 embed {
-    width: 1500px;
-    height: 1500px;
+  width: 1500px;
+  height: 1500px;
 }
